# sqlglot

./: pyproject.toml
sqlglot/: __main__.py  _typing.py  diff.py  errors.py  generator.py  helper.py  jsonpath.py  lineage.py  parser.py  planner.py  schema.py  serde.py  tokenizer_core.py  tokens.py  transforms.py
sqlglot/dialects/: athena.py  bigquery.py  clickhouse.py  dialect.py  duckdb.py  presto.py  singlestore.py
sqlglot/executor/: __init__.py  context.py  table.py
sqlglot/expressions/: __init__.py  aggregate.py  array.py  builders.py  core.py  datatypes.py  ddl.py  dml.py  functions.py  json.py  math.py  properties.py  query.py  string.py  temporal.py
sqlglot/generators/: athena.py  clickhouse.py  databricks.py  drill.py  druid.py  duckdb.py  hive.py  mysql.py  oracle.py  postgres.py  presto.py  redshift.py  snowflake.py  spark2.py  sqlite.py  starrocks.py  tableau.py  teradata.py  tsql.py
sqlglot/optimizer/: annotate_types.py  eliminate_subqueries.py  isolate_table_selects.py  optimize_joins.py  optimizer.py  pushdown_projections.py  qualify.py  qualify_columns.py  qualify_tables.py  resolver.py  scope.py  simplify.py
sqlglot/parsers/: athena.py  bigquery.py  clickhouse.py  doris.py  duckdb.py  exasol.py  hive.py  materialize.py  mysql.py  oracle.py  postgres.py  presto.py  prql.py  redshift.py  risingwave.py  singlestore.py  snowflake.py  spark.py  spark2.py  sqlite.py  starrocks.py  teradata.py  trino.py  tsql.py
tests/dialects/: test_redshift.py
