[project]
    authors = [{ name = "Toby Mao", email = "toby.mao@gmail.com" }]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: SQL",
    ]
    description = "An easily customizable SQL parser and transpiler"
    dynamic = ["optional-dependencies", "version"]
    license = "MIT"
    license-files = ["LICENSE"]
    name = "sqlglot"
    readme = "README.md"
    requires-python = ">= 3.9"

    [project.urls]
        Documentation = "https://sqlglot.com/sqlglot.html"
        Homepage      = "https://sqlglot.com/"
        Issues        = "https://github.com/tobymao/sqlglot/issues"
        Repository    = "https://github.com/tobymao/sqlglot"

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools >= 61.0", "setuptools_scm"]

[tool.setuptools]
    include-package-data = false

[tool.setuptools_scm]
    fallback_version = "0.0.0"
    local_scheme     = "no-local-version"
    version_file     = "sqlglot/_version.py"

    [tool.setuptools.packages.find]
        include = ["sqlglot", "sqlglot.*"]

    [tool.setuptools.package-data]
        "*" = ["py.typed"]

[tool.uv.sources]
    sqlglotc = { path = "./sqlglotc" }

[tool.ruff]
    line-length = 100

    [tool.ruff.lint]
        ignore = ["E721", "E741"]
        select = ["UP"]
